<resources>
    <string name="app_name">BottomNavigationBar</string>
    <string name="sample_fragment_content">Example fragment: %1$d</string>

    <string name="copied_xml_clipboard">Copied XML to clipboard</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="generate_xml_title">Generated XML</string>

    <string name="category_general">General</string>
    <string name="category_tab">Tab appearance</string>
    <string name="category_indicator">Indicator appearance</string>
    <string name="category_animations">Animations</string>
    <string name="category_badge">Tab badge</string>

    <string name="tab_actions_title">Example tab actions</string>
    <string name="add_start">Add to start</string>
    <string name="remove_last">Remove last</string>
    <string name="select_first">Select first</string>
    <string name="select_last">Select last</string>
    <string name="open_viewpager_example">Open ViewPager example</string>
    <string name="open_navcontroller_example">Open NavController example</string>

    <string name="generate_xml">Generate XML</string>
    <string name="show_examples">Show examples</string>

    <string name="tab_alarm">Alarm</string>
    <string name="tab_bedtime">Bedtime</string>
    <string name="tab_stopwatch">Stopwatch</string>
    <string name="tab_timer">Timer</string>

    <string name="set_property_value">Set %1$s value</string>
    <string name="apply">Apply</string>
    <string name="pick_color">Pick a color</string>

    <string name="example_styles">Example styles</string>
    <string name="view_pager_demo">ViewPager demo</string>
    <string name="bed">bed</string>
    <string name="alarm">alarm</string>
    <string name="bread">bread</string>
    <string name="cart">cart</string>
    <string name="textview">TextView</string>
    <string name="bounce">Bounce</string>
    <string name="flash">Flash</string>
    <string name="ruberband">Ruberband</string>
    <string name="shake">Shake</string>
    <string name="tada">Tada!</string>
    <string name="wave">Wave</string>
    <string name="wobble">Wobble</string>
    <string name="swing">Swing</string>
    <string name="fade">Fade</string>
    <string name="flip">Flip</string>
    <string name="rotate">Rotate</string>
    <string name="zoom">Zoom</string>
</resources>